# autoresearch-markets

./: .gitignore  README.md  learnings.md  prediction_market_auto-research_7b9239ee.plan.md  prepare.py  program.md  pyproject.toml  reset_and_run.sh  reward_hacking_audit.md  train.py
experiment_results/: analyze_best_strategy.py  fills_last3months.csv  results.txt
final results/: EXPERIMENT_REPORT.md  STRATEGY_TABLE.md  TWEET_THREAD.md  draft_tweet.py  generate_calibration_all_trades.py  generate_calibration_chart.py  generate_charts.py  generate_reward_hack_image.py  generate_strategy_table.py
markets_research/: __init__.py  attribution.py  backtest.py  bootstrap_demo_data.py  data_ingest_kalshi.py  data_ingest_polymarket.py  experiment.py  schema.py  scoring.py  storage.py  strategies.py
